# geometric_portfolio

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
src/geometric_portfolio/: Geometric_Mean.py  app.py  backtesting.py  data.py  leverage.py  metrics.py  montecarlo.py  plot.py  solver.py  st_shared.py  state.py  tickers.py
src/geometric_portfolio/pages/: Custom_Portfolio.py  Leverage_Optimizer.py
src/geometric_portfolio/screens/: custom_portfolio.py  geometric_mean.py  leverage_optimizer.py  page.py  pages.py  shared.py
tests/: test_backtesting.py  test_complete.py  test_data.py  test_leverage.py  test_metrics.py  test_montecarlo.py  test_screen_execution.py  test_solver.py
