[project]
name = "geometric-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "streamlit>=1.44.1",
    "tabulate>=0.9.0",
    "tool>=0.8.0",
    "watchdog>=6.0.0",
    "yfinance>=0.2.55",
    "scipy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/geometric_portfolio"]

[tool.ruff]
